Se modifica modulo enfoque y se crea directorio de proyecto

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -23,6 +23,8 @@
     "delete": "Delete",
     "yes": "Yes",
     "no": "No",
+    "list": "List",
+    "menu": "Menu",
     "next": "Next",
     "back": "Back",
     "profile": {
