--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -25,6 +25,8 @@
     "no": "No",
     "next": "Siguiente",
     "back": "Atras",
+    "list": "Lista",
+    "menu": "Menu",
     "profile": {
       "profile": "Perfil",
       "personal_information": "Información personal",
