se agrega perdonaproyecto

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -851,6 +851,8 @@
   "project": {
     "project": "Project",
     "projects": "Projects",
+    "selected": "The record has already been selected",
+    "person": "Person",
     "create": "Create project",
     "update": "Update project",
     "code": "Code",
