--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -875,6 +875,7 @@
     }
   },
   "file": {
+    "name": "Name",
     "created": {
       "success": "File created successfully!",
       "error": "File couldn't be created!",
