se agrega formulario de riesgos

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -854,6 +854,22 @@
     "description": "Description",
     "title": "Title",
     "status": "Status",
+    "addRisk": "Add Risk",
+    "uploadFile": "Upload File",
+    "riskControlRegistration": "Risks Control Registration",
+    "ref": "Ref",
+    "auditor": "Auditor",
+    "quadrant": "Quadrant",
+    "date": "Date",
+    "riskMatrix": "Risk Matrix",
+    "allRisks": "All risks",
+    "quadrantI": "Quadrant I",
+    "quadrantII": "Quadrant II",
+    "quadrantIII": "Quadrant III",
+    "quadrantIV": "Quadrant IV",
+    "customerExpectations": "Customer Expectations",
+    "pointsOf": "Points Of",
+    "sampling": "Sampling (CMA)",
     "created": {
       "success": "Risk Unit created successfully!",
       "error": "Risk Unit couldn't be created!",
@@ -871,6 +887,100 @@
     "restore": {
         "success": "Risk Unit restored successfully!",
         "error" : "Risk Unit couldn't be restored!",
+        "question": "Do you want to restore "
+    }
+  },
+  "risk": {
+    "index": "Index",
+    "description": "Description",
+    "title": "Title",
+    "ref": "Ref",
+    "riskFrom": "Risk from",
+    "quadrant": "Quadrant",
+    "quadrantI": "Quadrant 1",
+    "quadrantII": "Quadrant 2",
+    "quadrantIII": "Quadrant 3",
+    "quadrantIV": "Quadrant 4",
+    "othersRisk": "Others Risk",
+    "recurringTransactions": "Recurring Transactions",
+    "nonRecurringTransactions": "Non Recurring Transactions",
+    "judgmentsAndEstimates": "Judgments and Estimates",
+    "accountingClosingEntries": "Accounting Closing Entries",
+    "riskArea": "Risk Area",
+    "critical": "Critical",
+    "strategic": "Strategic",
+    "support": "Suppor",
+    "natureOfTheRisk": "Nature of the Risk",
+    "intentional": "Intentional",
+    "unintentional": "Unintentional",
+    "businessViability": "Business Viability",
+    "customerExpectations": "Customer Expectations",
+    "additionalProcedures": "Additional Proceduress",
+    "middle": "Middle",
+    "low": "Low",
+    "high": "High",
+    "inherent": "Inherent",
+    "control": "Control",
+    "analytic": "Analytic",
+    "riskFactor": "Risk Factor",
+    "risksAssessment": "Risks Assessment",
+    "processesWhereRiskIsInvolved": "Processes Where Risk is Involved",
+    "causativeSourceOfRisk": "Causative Source of Risk",
+    "impactOnTheFinancialStatementsAndAccountsConcerned": "Impact on the Financial Statements and Accounts Concerned",
+    "associatedAssertions": "Associated Assertions",
+    "assertionsAboutTransactionClassesAndEvents": "Aseveraciones sobre las Clases de Transacciones y Eventos",
+    "iOccurrence(O)": "I. Occurrence (O)",
+    "iiIntegrity(I)": "II. Integrity (I)",
+    "iiiAccuracy(A)": "III. Accuracy (A)",
+    "iVCourt(CO)": "IV. Court (CO)",
+    "vClassification(CL)": "V. Classification (CL)",
+    "aseveracionesSobreLosSaldosContables": "Statements on Balancing Items",
+    "iExistence(E)": "I. Existence (E)",
+    "iiRightsAndObligations(RO)": "II Rights and Obligations (RO)",
+    "iiiIntegrity(I)": "III. Integrity (I)",
+    "ivEvaluationAndAssignment(EA)": "IV. Evaluation and Assignmenn (EA)",
+    "assertionsAboutPresentationAndDisclosure": "Assertions About Presentation and Disclosure",
+    "iTheOccurrenceAndRightsAndOblications(ORO)": "I. The Occurrence and Rights and Oblications (ORO)",
+    "iiiClassificationAndComprehension(CC)": "III. Classification and Comprehension (CC)",
+    "ivAccuracyAndValuation(AV)": "IV. Accuracy and Valuation (AV)",
+    "evaluationOfControls": "Evaluation of Controls",
+    "effectiveDesign": "Effective Design",
+    "effectiveOperability": "Effective Operability",
+    "monitoring": "Monitoring",
+    "untried": "Untried",
+    "general": "General",
+    "specific": "Specífic",
+    "informationIntegrity": "Information Integrity",
+    "effective": "Effective",
+    "noeffective": "No effective",
+    "riskReductionApproach": "Risk Reduction Approach",
+    "detect/CorrectExistingErrors": "Detect/Correct Existing Errors",
+    "approach": "Approach",
+    "outcomeOfTheAuditProceduresApplied": "Resultado de los procedimientos de Auditoria Aplicados",
+    "reference(s)ToWorkingPapers": "Reference(s) to Working Papers",
+    "preventionOfFutureOccurrence:": "Prevention of Future Occurrence:",
+    "recommendationForProcessImprovementprocess": "Recommendation for Process Improvementprocess",
+    "residualAuditRisk": "Residual AuditRisk",
+    "effectOnTheAuditOpinion": "Effect on the Audit Opinion",
+
+
+    "created": {
+      "success": "Risk created successfully!",
+      "error": "Risk couldn't be created!",
+      "errorStatus": "¡Risk already exists, but it is inactive!"
+    },
+    "updated": {
+      "success": "Risk updated successfully!",
+      "error": "Risk couldn't be updated!"
+    },
+    "deleted": {
+      "success": "Risk deleted successfully!",
+      "error": "Risk couldn't be deleted!",
+      "question": "Do you want to delete Risk  "
+    },
+    "restore": {
+        "success": "Risk restored successfully!",
+        "error" : "Risk couldn't be restored!",
         "question": "Do you want to restore "
     }
   },
