--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -17,10 +17,17 @@
     "Setup": "Set up",
     "empty_table": "Empty table",
     "search": "Search",
+    "assignPerson": "Assign Person",
+    "print": "Print",
     "submit": "Submit",
+    "dolownd": "Dolownd File",
+    "upload": "Upload File",
+    "addRisk": "Add Risk",
     "reset": "Reset",
+    "redirect": "Redirect",
     "Add new": "Add new",
     "edit": "Edit",
+    "restore": "Restore",
     "delete": "Delete",
     "yes": "Yes",
     "no": "No",
