--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -21,6 +21,13 @@
     "reset": "Reiniciar",
     "add_new": "Agregar nuevo",
     "edit": "Editar",
+    "assignPerson": "Asignar Persona",
+    "dolownd": "Descargar Archivo",
+    "upload": "Subir Archivo",
+    "addRisk": "Agregar Riesgo",
+    "print": "Imprimir",
+    "restore": "Restaurar",
+    "redirect": "Redireccionar",
     "delete": "Eliminar",
     "yes": "Si",
     "no": "No",
